@@ -376,15 +376,15 @@ function sf_ldap_create_user_from_object(&$user) {
 	$entry['objectClass'][1]='account';
 	$entry['objectClass'][2]='posixAccount';
 	$entry['objectClass'][3]='shadowAccount';
-	$entry['objectClass'][4]='debSfAccount';
+	$entry['objectClass'][4]='debGforgeAccount';
 	$entry['uid']=$user->getUnixName();
 	$entry['cn']=asciize($user->getRealName());
 	$entry['gecos']=asciize($user->getRealName());
 	$entry['userPassword']='{crypt}'.$user->getUnixPasswd();
 	$entry['homeDirectory'] = account_user_homedir($user->getUnixName());
 	$entry['loginShell']=$user->getShell();
-	$entry['debSfCvsShell']="/bin/cvssh"; // unless explicitly set otherwise, developer has write access
-	$entry['debSfForwardEmail']=$user->getEmail();
+	$entry['debGforgeCvsShell']="/bin/cvssh"; // unless explicitly set otherwise, developer has write access
+	$entry['debGforgeForwardEmail']=$user->getEmail();
 	$entry['uidNumber']=$user->getUnixUID() + $UID_ADD;
 	$entry['gidNumber']=$user->getUnixUID() + $UID_ADD; // users as in debian backend
 	$entry['shadowLastChange']=1; // We don't have expiration, so any non-0
@@ -425,15 +425,15 @@ function sf_ldap_create_user_from_props($username, $cn, $crypt_pw,
 	$entry['objectClass'][1]='account';
 	$entry['objectClass'][2]='posixAccount';
 	$entry['objectClass'][3]='shadowAccount';
-	$entry['objectClass'][4]='debSfAccount';
+	$entry['objectClass'][4]='debGforgeAccount';
 	$entry['uid']=$username;
 	$entry['cn']=asciize($cn);
 	$entry['gecos']=asciize($cn);
 	$entry['userPassword']='{crypt}'.$crypt_pw;
 	$entry['homeDirectory'] = account_user_homedir($username);
 	$entry['loginShell']=$shell;
-	$entry['debSfCvsShell']=$cvsshell; 
-	$entry['debSfForwardEmail']=$email;
+	$entry['debGforgeCvsShell']=$cvsshell; 
+	$entry['debGforgeForwardEmail']=$email;
 	$entry['uidNumber']=$uid;
 	$entry['gidNumber']=$gid;
 	$entry['shadowLastChange']=1;
