@@ -54,7 +54,7 @@ objectClass: account
 objectClass: posixAccount
 objectClass: top
 objectClass: shadowAccount
-objectClass: debSfAccount
+objectClass: debGforgeAccount
 ";
 	#CB# gid was 100, i replace with $gid=$uid
 	$gid = $uid;
@@ -63,12 +63,12 @@ shadowLastChange: 10879
 shadowMax: 99999
 shadowWarning: 7
 loginShell: $shell
-debSfCvsShell: $cvs_flags2shell[$cvs_flags]
+debGforgeCvsShell: $cvs_flags2shell[$cvs_flags]
 uidNumber: $uid
 gidNumber: $gid
 homeDirectory: $chroot/home/users/$username
 gecos: $realname
-debSfForwardEmail: $email
+debGforgeForwardEmail: $email
 
 ";
 	#CB# To have the same id than generated by new_parse
@@ -138,18 +138,18 @@ $rel->execute();
 
 while(my ($group_list_id, $listname, $user_name, $password, $description) = $rel->fetchrow()) {
 	print "dn: cn=$listname,ou=mailingList,$sys_ldap_base_dn
-objectClass: debSfMailingListMM21
+objectClass: debGforgeMailingListMM21
 objectClass: top
-debSfListPostAddress: \"|/var/lib/mailman/mail/mailman post $listname\"
-debSfListOwnerAddress: \"|/var/lib/mailman/mail/mailman mailowner $listname\"
-debSfListRequestAddress: \"|/var/lib/mailman/mail/mailman mailcmd $listname\"
-debSfListAdminAddress: \"|/var/lib/mailman/mail/mailman admin $listname\"
-debSfListBouncesAddress: \"|/var/lib/mailman/mail/mailman bounces $listname\"
-debSfListConfirmAddress: \"|/var/lib/mailman/mail/mailman confirm $listname\"
-debSfListJoinAddress: \"|/var/lib/mailman/mail/mailman join $listname\"
-debSfListLeaveAddress: \"|/var/lib/mailman/mail/mailman leave $listname\"
-debSfListSubscribeAddress: \"|/var/lib/mailman/mail/mailman subscribe $listname\"
-debSfListUnsubscribeAddress: \"|/var/lib/mailman/mail/mailman unsubscribe $listname\"
+debGforgeListPostAddress: \"|/var/lib/mailman/mail/mailman post $listname\"
+debGforgeListOwnerAddress: \"|/var/lib/mailman/mail/mailman mailowner $listname\"
+debGforgeListRequestAddress: \"|/var/lib/mailman/mail/mailman mailcmd $listname\"
+debGforgeListAdminAddress: \"|/var/lib/mailman/mail/mailman admin $listname\"
+debGforgeListBouncesAddress: \"|/var/lib/mailman/mail/mailman bounces $listname\"
+debGforgeListConfirmAddress: \"|/var/lib/mailman/mail/mailman confirm $listname\"
+debGforgeListJoinAddress: \"|/var/lib/mailman/mail/mailman join $listname\"
+debGforgeListLeaveAddress: \"|/var/lib/mailman/mail/mailman leave $listname\"
+debGforgeListSubscribeAddress: \"|/var/lib/mailman/mail/mailman subscribe $listname\"
+debGforgeListUnsubscribeAddress: \"|/var/lib/mailman/mail/mailman unsubscribe $listname\"
 ";
 	print "\n";
 }
@@ -188,13 +188,13 @@ objectClass: account
 objectClass: posixAccount
 objectClass: top
 objectClass: shadowAccount
-objectClass: debSfAccount
+objectClass: debGforgeAccount
 userPassword: {crypt}x
 shadowLastChange: 1
 shadowMax: 99999
 shadowWarning: 7
 loginShell: /bin/false
-debSfCvsShell: /bin/false
+debGforgeCvsShell: /bin/false
 uidNumber: $uid
 gidNumber: $gid
 homeDirectory: $chroot/home/users/anoncvs_$groupname
@@ -281,13 +281,13 @@ objectClass: account
 objectClass: posixAccount
 objectClass: top
 objectClass: shadowAccount
-objectClass: debSfAccount
+objectClass: debGforgeAccount
 userPassword: {crypt}x
 shadowLastChange: 10879
 shadowMax: 99999
 shadowWarning: 7
 loginShell: /bin/false
-debSfCvsShell: /bin/false
+debGforgeCvsShell: /bin/false
 uidNumber: $dummy_uid
 gidNumber: $dummy_uid
 homeDirectory: $chroot/home/users/dummy
